# go2_ros2_sdk

go2_interfaces/: CMakeLists.txt
go2_interfaces/srv/: RobotCommand.srv
go2_robot_sdk/go2_robot_sdk/: main.py
go2_robot_sdk/go2_robot_sdk/domain/entities/: robot_config.py
go2_robot_sdk/go2_robot_sdk/infrastructure/webrtc/: go2_connection.py  webrtc_adapter.py
go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
lidar_processor/lidar_processor/: lidar_to_pointcloud_node.py
robot_controller/: package.xml  setup.py
robot_controller/robot_controller/: controller_node.py  mcp_server.py  robot_api.py  state_machine.py
