<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_controller</name>
  <version>0.1.0</version>
  <description>State-aware robot controller with MCP interface for Go2</description>
  <maintainer email="justin.d.katz@gmail.com">Justin</maintainer>
  <license>BSD-3-Clause</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>go2_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
